# basec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: unit_test.yml
cmake/: unit_test.cmake
doc/: doxygen.cfg
include/basec/: basec_linked_list.h  basec_logging.h  basec_macro.h  basec_module.h  basec_print.h  basec_string.h  basec_string_conversion.h  basec_time.h  basec_type.h
install/include/basec/: basec_macro.h  basec_module.h  basec_type.h  json_module.h  math_module.h  mpi_module.h  utils_module.h
install/include/basec/math/: math_bicgstab_gmres.h
install/include/basec/utils/: utils_linked_list.h  utils_memory.h  utils_string_conversion.h  utils_time.h
install/share/cmake/: basec-debug.cmake  basec-release.cmake  basec.cmake
src/: CMakeLists.txt  file.c  linked_list.c  logging.c  logging_private.h  memory.c  print.c  string.c  string_conversion.c  time.c
src/Global/: CMakeLists.txt
src/Global/include/basec/: global_module.h
src/Global/src/: global.c  global_private.h  routine.c
src/Global/test/: global.c
src/HDF5/: CMakeLists.txt
src/HDF5/include/basec/: hdf5_module.h
src/HDF5/include/basec/hdf5/: hdf5_attribute.h  hdf5_dataset.h  hdf5_type.h
src/HDF5/src/: hdf5.c  hdf5_attribute.c  hdf5_dataset.c  hdf5_file.c  hdf5_group.c  hdf5_link.c  hdf5_private.h
src/HDF5/test/: hdf5.c  hdf5_read.c  hdf5_write.c
src/JSON/: CMakeLists.txt
src/JSON/include/basec/: json_module.h
src/JSON/src/: getter.c  json.c  json_private.h  parse_types.c  parser.c  print.c  setter.c
src/JSON/test/: json.c  json_parse.c  json_parse_string.c  parser.c
src/MPI/: CMakeLists.txt
src/MPI/include/basec/: mpi_module.h
src/MPI/src/: mpi.c  mpi_private.h  reduce.c  send_receive.c
src/MPI/test/: mpi.c
src/Math/: CMakeLists.txt
src/Math/include/basec/: math_module.h
src/Math/include/basec/math/: math_bicgstab_gmres.h  math_vector.h  math_vector_int.h
src/Math/src/: bicgstab.c  bicgstab_gmres_private.h  conversion.c  functions.c  gmres.c  math_private.h  vector.c  vector_int.c
src/Math/test/: bicgstab_gmres.c  conversion.c  functions.c  numerics.py  vector.c  vector_int.c
src/Parameter/: CMakeLists.txt
src/Parameter/include/basec/: parameter_module.h
src/Parameter/src/: getter.c  parameter.c  parameter_private.h  setter.c
src/Parameter/test/: parameter.c  parameter_read.c  parameter_write.c
src/Utils/: CMakeLists.txt
src/Utils/include/basec/: utils_module.h
src/Utils/include/basec/utils/: utils_file.h  utils_linked_list.h  utils_logging.h  utils_memory.h  utils_print.h  utils_string.h  utils_string_conversion.h  utils_time.h  utils_version.h
src/Utils/src/: file.c  linked_list.c  logging.c  logging_private.h  memory.c  print.c  string.c  string_conversion.c  time.c  utils_private.h  version.c
src/Utils/test/: file.c  linked_list.c  logging.c  memory.c  print.c  string.c  string_conversion.c  time.c  version.c
src/include/basec/: basec_macro.h  basec_module.h  basec_type.h
test/: file.c  linked_list.c  logging.c  memory.c  print.c  string.c  string_conversion.c  time.c
tools/: generate_valgrind_supressions.sh
